# treesheets

./: .gitignore  AGENTS.md  README.md
.github/workflows/: build.yml
TS/docs/: HIERARCHY_SWAP.md
docs/: ANSWER_SUMMARY.md  HIERARCHY_SWAP.md  HIERARCHY_SWAP_EXAMPLES.md  HIERARCHY_SWAP_FEATURE.md  README.md
rust/: Cargo.toml  PROGRESS.md
rust/src/: display.rs  io.rs  main.rs  sheet.rs
rust/treesheets-cli/: Cargo.toml
rust/treesheets-cli/src/: display.rs  main.rs
rust/treesheets-core/: Cargo.toml
rust/treesheets-core/src/: io.rs  lib.rs  sheet.rs
rust/treesheets-ui/: Cargo.toml  README.md
rust/treesheets-ui/examples/: demo.rs
rust/treesheets-ui/src/: app.rs  lib.rs
