[package]
name = "treesheets-rs"
version = "0.1.0"
edition = "2021"
authors = ["TreeSheets Rust Port Team"]
description = "Rust-based experimental reimplementation of the TreeSheets data organizer"
license = "Zlib"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.10"
