[workspace]
resolver = "2"
members = [
    "treesheets-core",
    "treesheets-cli",
    "treesheets-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TreeSheets Rust Port Team"]
license = "Zlib"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }

# Dev dependencies
pretty_assertions = "1.4"
tempfile = "3.10"
