[package]
name = "treesheets-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for TreeSheets"

[[bin]]
name = "treesheets"
path = "src/main.rs"

[dependencies]
treesheets-core = { path = "../treesheets-core" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
