[package]
name = "treesheets-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core data structures and logic for TreeSheets"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
