[package]
name = "treesheets-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Graphical user interface for TreeSheets (experimental)"

[dependencies]
treesheets-core = { path = "../treesheets-core" }
egui = "0.30"
eframe = "0.30"  # egui framework for native apps
serde.workspace = true

[dev-dependencies]
env_logger = "0.11"
